--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bshdo/eslint-config",
-  "version": "1.0.0-rc1",
-  "author": "Stevan Rašković <stevan.raskovic@bshdo.co>",
+  "version": "1.0.0-rc4",
+  "author": "Stevan Rašković <hello@bshdo.co>",
   "homepage": "https://github.com/bshdo/eslint-config#readme",
   "license": "ISC",
   "main": "index.js",
@@ -13,34 +13,35 @@
     "url": "git+https://github.com/bshdo/eslint-config.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "eslint --ignore-path .gitignore \"*.+(ts|js|tsx)\""
   },
   "bugs": {
     "url": "https://github.com/bshdo/eslint-config/issues"
   },
   "dependencies": {
-    "@bshdo/prettier-config": "^1.0.0-rc1",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "eslint": "^7.6.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-module-resolver": "^0.17.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^5.0.3",
-    "prettier-eslint": "^12.0.0"
+    "typescript": "^4.7.2"
   },
   "peerDependencies": {
-    "@rushstack/eslint-patch": "1.0.2",
-    "eslint": "^7.6.0",
-    "prettier": "^2.0.5",
-    "typescript": "^4.1.3"
+    "@rushstack/eslint-patch": "^1.1.3",
+    "eslint": "^8.17.0",
+    "prettier": "^2.6.2",
+    "typescript": "^4.7.2"
+  },
+  "devDependencies": {
+    "@rushstack/eslint-patch": "^1.1.3",
+    "prettier": "^2.6.2"
   }
 }
