--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bshdo/eslint-config",
-  "version": "1.0.0-rc4",
+  "version": "1.0.0",
   "author": "Stevan Rašković <hello@bshdo.co>",
   "homepage": "https://github.com/bshdo/eslint-config#readme",
   "license": "ISC",
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/bshdo/eslint-config.git"
   },
   "scripts": {
-    "test": "eslint --ignore-path .gitignore \"*.+(ts|js|tsx)\""
+    "format": "prettier . --write"
   },
   "bugs": {
     "url": "https://github.com/bshdo/eslint-config/issues"
@@ -27,12 +27,13 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-tailwindcss": "^3.5.2",
     "eslint-plugin-unicorn": "^42.0.0",
     "typescript": "^4.7.2"
   },
@@ -43,7 +44,6 @@
     "typescript": "^4.7.2"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.3",
     "prettier": "^2.6.2"
   }
 }
